Edited wiki page through web user interface.

--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -1,5 +1,5 @@
 #summary cxf-protobuf documentation
-= User's Guide to cxf-protobuf
+= User's Guide to cxf-protobuf =
 
 <wiki:toc max_depth="1" />
 
