--- a/wiki/PageName.wiki
+++ b/wiki/PageName.wiki
@@ -13,10 +13,10 @@ cxf-protobuf is a simple integration of Apache CXF, an open source application s
    * integration with CXF's (Spring) configuration
    * description generation for protocol buffer services ?wsdl-style (adopted from the SOAP world) 
 
-== Example 1: !AddressBook Service ==
+== Example 1: !AddressBook service ==
 
-== Example 2: !AddressBook Client ==
+== Example 2: !AddressBook client ==
 
-== Example 3: !AddressBook Service Configured in Spring ==
+== Example 3: !AddressBook service configured in Spring ==
 
-== Example 4: !AddressBook Message Handler Service ==
+== Example 4: !AddressBook message handler service ==
