Edited wiki page through web user interface.

--- a/wiki/UsersGuide.wiki
+++ b/wiki/UsersGuide.wiki
@@ -6,11 +6,11 @@
 
 cxf-protobuf is a simple integration of Apache CXF, an open source application services framework and Google's Protocol Buffers. The main features are
 
-   * *server API for publishing a service that processes protocol buffer messages* 
-   * *client API for sending messages to protocol buffer services using CXF's transport* infrastructure
+   * *server API for publishing a service that can process protocol buffer messages* 
+   * *client API for sending messages to protocol buffer services using CXF's transport infrastructure*
    * *support for both RPC-style dispatching and single message handler style implementation on the server-side*
-   * integration with CXF's (Spring) configuration
-   * description generation for protocol buffer services ?wsdl-style (adopted from the SOAP world) 
+   * *integration with CXF's (Spring) configuration*
+   * *description generation for protocol buffer services ?wsdl-style (adopted from the SOAP world)* 
 
 == Example 1: !AddressBook service ==
 
