--- a/cxf-protobuf/README
+++ b/cxf-protobuf/README
@@ -1,1 +1,1 @@
-Simple integration of Google's Protocol Buffers with the Apache CXF messaging framework.
+Simple integration of Google's Protocol Buffers and the Apache CXF messaging framework.
