--- a/wiki/UsersGuide.wiki
+++ b/wiki/UsersGuide.wiki
@@ -4,7 +4,7 @@
 
 == Introduction ==
 
-cxf-protobuf is a simple integration of [http://cxf.apache.org/ Apache CXF], an open source application services framework and [http://code.google.com/p/protobuf/ Google's Protocol Buffers]. The main features are
+cxf-protobuf is a simple integration of [http://cxf.apache.org/ Apache CXF], an open source services framework and [http://code.google.com/p/protobuf/ Google's Protocol Buffers]. The main features are
 
    * *server API for publishing a service that can process protocol buffer messages* 
    * *client API for sending messages to protocol buffer services using CXF's transport infrastructure*
@@ -12,10 +12,12 @@ cxf-protobuf is a simple integration of [http://cxf.apache.org/ Apache CXF], an 
    * *integration with CXF's (Spring) configuration*
    * *description generation for protocol buffer services ?wsdl-style (adopted from the SOAP world)* 
 
-== Example 1: !AddressBook service ==
+== Examples ==
 
-== Example 2: !AddressBook client ==
+=== Example 1: !AddressBook service ===
 
-== Example 3: !AddressBook service configured in Spring ==
+=== Example 2: !AddressBook client ===
 
-== Example 4: !AddressBook message handler service ==
+=== Example 3: !AddressBook service configured in Spring ===
+
+=== Example 4: !AddressBook message handler service ===
