--- a/wiki/UsersGuide.wiki
+++ b/wiki/UsersGuide.wiki
@@ -14,7 +14,13 @@ cxf-protobuf is a simple integration of [http://cxf.apache.org/ Apache CXF], an 
 
 == Examples ==
 
+You can get the examples at the downloads page. You will need maven to build them. As an alternative, you can get the following jars manually and compile the example against them with any tool or IDE you like:
+   * CXF jars and dependencies
+   * cxf-protobuf jar
+
 === Example 1: !AddressBook service ===
+
+All examples are built around the "address book" protocol buffer sample that you can find in Google's tutorial here.
 
 === Example 2: !AddressBook client ===
 
