Edited wiki page through web user interface.

--- a/wiki/UsersGuide.wiki
+++ b/wiki/UsersGuide.wiki
@@ -14,13 +14,47 @@ cxf-protobuf is a simple integration of [http://cxf.apache.org/ Apache CXF], an 
 
 == Examples ==
 
-You can get the examples at the downloads page. You will need maven to build them. As an alternative, you can get the following jars manually and compile the example against them with any tool or IDE you like:
+You can get the examples at the downloads page. You will need maven to build them. As an alternative, you can get the following jars manually and compile the examples against them with any tool or IDE you like:
    * CXF jars and dependencies
    * cxf-protobuf jar
 
 === Example 1: !AddressBook service ===
 
-All examples are built around the "address book" protocol buffer sample that you can find in Google's tutorial here.
+All examples are built around the "address book" protocol buffer sample that you can find in [http://code.google.com/apis/protocolbuffers/docs/javatutorial.html Google's tutorial]: 
+
+
+{{{
+package tutorial;
+
+option java_package = "com.example.tutorial";
+option java_outer_classname = "AddressBookProtos";
+
+message Person {
+  required string name = 1;
+  required int32 id = 2;
+  optional string email = 3;
+
+  enum PhoneType {
+    MOBILE = 0;
+    HOME = 1;
+    WORK = 2;
+  }
+
+  message PhoneNumber {
+    required string number = 1;
+    optional PhoneType type = 2 [default = HOME];
+  }
+
+  repeated PhoneNumber phone = 4;
+}
+
+message AddressBook {
+  repeated Person person = 1;
+}
+}}}
+
+First I added a few extra messages to the ad
+
 
 === Example 2: !AddressBook client ===
 
