--- a/wiki/UsersGuide.wiki
+++ b/wiki/UsersGuide.wiki
@@ -82,6 +82,8 @@ message AddressBookServiceMessage {
 }
 }}}
 
+I chose the name AddressBookServiceMessage to make it clear that AddressBookService always expects this type of message as the request. The client can decide which operation he or she wants to invoke by filling in the corresponding field in AddressBookServiceMessage (because of this, each field is declared optional)
+
 
 === Example 2: !AddressBook client ===
 
