--- a/wiki/UsersGuide.wiki
+++ b/wiki/UsersGuide.wiki
@@ -20,6 +20,8 @@ You can get the examples at the downloads page. You will need maven to build the
 
 === Example 1: !AddressBook service ===
 
+You can download this example at ...
+
 All examples are built around the "address book" protocol buffer sample that you can find in [http://code.google.com/apis/protocolbuffers/docs/javatutorial.html Google's tutorial]: 
 
 
@@ -82,8 +84,11 @@ message AddressBookServiceMessage {
 }
 }}}
 
-I chose the name AddressBookServiceMessage to make it clear that AddressBookService always expects this type of message as the request. The client can decide which operation he or she wants to invoke by filling in the corresponding field in AddressBookServiceMessage (because of this, each field is declared optional). It is important to note that this is just my convention, you can choose other ways to structure your request message.
+I chose the name AddressBookServiceMessage to make it clear that AddressBookService always expects this type of message as the request. The client can decide which operation he or she wants to invoke by filling in the corresponding field in AddressBookServiceMessage (because of this, each field is declared optional). It is important to note that this is just a convention, you can choose other ways to structure your request message.
 
+All we need now is to put these definitions in a file (addressbook.proto) and generate the java stub for the service and messages:
+
+{{{ protoc --java_out=. addressbook.proto }}}
 
 === Example 2: !AddressBook client ===
 
