--- a/wiki/UsersGuide.wiki
+++ b/wiki/UsersGuide.wiki
@@ -86,9 +86,38 @@ message AddressBookServiceMessage {
 
 I chose the name AddressBookServiceMessage to make it clear that AddressBookService always expects this type of message as the request. The client can decide which operation he or she wants to invoke by filling in the corresponding field in AddressBookServiceMessage (because of this, each field is declared optional). It is important to note that this is just a convention, you can choose other ways to structure your request message.
 
-All we need now is to put these definitions in a file (addressbook.proto) and generate the java stub for the service and messages:
+All we need to do now is put these definitions in a file (addressbook.proto) and generate the java stub for the service and messages:
 
 {{{ protoc --java_out=. addressbook.proto }}}
+
+This will generate the class `com.example.tutorial.AddressBookProtos`. This class contains the service interface and stub and all message types. The service interface (which is actually an abstract class) is called `com.example.tutorial.AddressBookProtos.AddressBookService`, you need to implement this:
+
+{{{
+public class AddressBookServiceImpl extends AddressBookService {
+	Map<Integer, Person> records = new ConcurrentHashMap<Integer, Person>();
+
+	public void listPeople(RpcController controller,
+			NamePattern request, RpcCallback<AddressBook> done) {
+		AddressBook.Builder addressbook = AddressBook
+				.newBuilder();
+
+		for (Person person : records.values()) {
+			if (person.getName().indexOf(request.getPattern()) >= 0) {
+				addressbook.addPerson(person);
+			}
+		}
+
+		done.run(addressbook.build());
+	}
+
+	public void addPerson(RpcController controller,
+			Person request, RpcCallback<AddressBookSize> done) {
+		records.put(request.getId(), request);
+		done.run(AddressBookSize.newBuilder().setSize(
+				records.size()).build());
+	}
+}
+}}}
 
 === Example 2: !AddressBook client ===
 
