--- a/wiki/UsersGuide.wiki
+++ b/wiki/UsersGuide.wiki
@@ -14,9 +14,19 @@ cxf-protobuf is a simple integration of [http://cxf.apache.org/ Apache CXF], an 
 
 == Examples ==
 
-You can get the examples at the downloads page. You will need maven to build them. As an alternative, you can get the following jars manually and compile the examples against them with any tool or IDE you like:
+You can get the examples at the downloads page. You will need Maven to build them. As an alternative, you can get the following jars manually and compile the examples against them with any tool or IDE you like:
    * CXF jars and dependencies
    * cxf-protobuf jar
+You need to put these jars in your classpath to compile and run the examples.
+
+If you want to use Maven, you need to do this:
+   * download and install maven
+   * download the cxf-protobuf project and unzip it
+   * go to its top level directory and build it by executing `mvn jar:jar`
+   * install it in your local repository by `mvn install`
+   * download the project source of an example
+   * build it by `mvn jar:jar`
+   * execute the `com.google.code.cxf.protobuf.example.addressbook.Server` class for the server, the `com.google.code.cxf.protobuf.example.addressbook.Client` class for the client
 
 === Example 1: !AddressBook service ===
 
