--- a/wiki/UsersGuide.wiki
+++ b/wiki/UsersGuide.wiki
@@ -22,7 +22,8 @@ You need to put these jars in your classpath to compile and run the examples.
 If you want to use Maven, you need to do this:
    * download and install maven
    * download the cxf-protobuf project and unzip it
-   * go to its top level directory and build it by executing `mvn jar:jar`
+   * go to its top level directory and build it by executing 
+      * `mvn jar:jar`
    * install it in your local repository by `mvn install`
    * download the project source of an example
    * build it by `mvn jar:jar`
