--- a/wiki/UsersGuide.wiki
+++ b/wiki/UsersGuide.wiki
@@ -22,12 +22,14 @@ You need to put these jars in your classpath to compile and run the examples.
 If you want to use Maven, you need to do this:
    * download and install maven
    * download the cxf-protobuf project and unzip it
-   * go to its top level directory and build it by executing 
+   * go to its top level directory and build it: 
       * `mvn jar:jar`
-   * install it in your local repository by `mvn install`
+   * install it in your local repository: 
+      * `mvn install`
    * download the project source of an example
-   * build it by `mvn jar:jar`
-   * execute the `com.google.code.cxf.protobuf.example.addressbook.Server` class for the server, the `com.google.code.cxf.protobuf.example.addressbook.Client` class for the client
+   * build it:
+      * `mvn jar:jar`
+   * run the `com.google.code.cxf.protobuf.example.addressbook.Server` class for the server and the `com.google.code.cxf.protobuf.example.addressbook.Client` class for the client
 
 === Example 1: !AddressBook service ===
 
