--- a/wiki/UsersGuide.wiki
+++ b/wiki/UsersGuide.wiki
@@ -209,7 +209,7 @@ and the java code to start up the server:
 
 You can download this example at ...
 
-If you don't like RPC, don't want to define a service in your .proto file, or just simply want to handle the entire request message in your code, you can implement the `com.google.code.cxf.protobuf.ProtobufMessageHandler` interface:
+If you don't like RPC or don't want to define a service in your .proto file, or just simply want to handle the entire request message in your code, you can implement the `com.google.code.cxf.protobuf.ProtobufMessageHandler` interface:
 
 {{{
 public interface ProtobufMessageHandler<REQUEST extends Message> {
