--- a/wiki/UsersGuide.wiki
+++ b/wiki/UsersGuide.wiki
@@ -8,7 +8,7 @@ cxf-protobuf is a simple integration of [http://cxf.apache.org/ Apache CXF], an 
 
    * *Simple API to publish both RPC and non-RPC style services using CXF's transports* 
    * *Simple client API to send messages to protocol buffer services using CXF's transport infrastructure*
-   * *Simply configurable in Spring, integration with CXF's configuration*
+   * *Simple configuration in Spring, integration with CXF's configuration*
    * *?WSDL-style description generation for protocol buffer services (adopted from the SOAP world)* 
 
 == Examples ==
